# EvoGuard

./: .dvcignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  NEXT_TRAINING_PLAN.md  README.md  claude.md  codecov.yml  docker-compose.monitoring.yml  pyproject.toml
attacker/: __init__.py  ollama_client.py  orchestrator.py  pyproject.toml
attacker/mappings/: __init__.py  homoglyph_map.py  leetspeak_map.py  unicode_map.py
attacker/prompts/: adversarial.txt  evasion.txt  paraphrase.txt
attacker/strategies/: __init__.py  adversarial_llm.py  base.py  homoglyph.py  leetspeak.py  llm_evasion.py  unicode_evasion.py
attacker/tests/: __init__.py  conftest.py  test_homoglyph.py  test_leetspeak.py  test_llm_evasion.py  test_orchestrator.py  test_unicode_evasion.py
ml-service/: Dockerfile  README.md  TRAINING_STANDARDS.md  TRAINING_STATUS.md  pyproject.toml
ml-service/data/korean/: label_error_report.txt
ml-service/data/korean/KOTOX/: .gitignore  Gwets.py  LICENSE  augmentation.py  requirements.txt
ml-service/data/korean/KOTOX/augment_funtions/: __init__.py  phonetic_addition.py  processing.py  rule.py
ml-service/data/korean/KOTOX/classification/: config.py  dataloader.py  eval.py  eval_config.py  model.py  train.py  utils.py
ml-service/data/korean/KOTOX/evaluation/: PROMPTS.py  inference_examples.sh  perspective.py
ml-service/data/korean/KOTOX/finetuning/: train_examples.sh
ml-service/data/korean/KOTOX/rules/: korean_prompt.txt  latin_prompt.txt
ml-service/data/korean/augmented/: augmented_toxic.tsv
ml-service/docs/: COEVOLUTION_TRAINING_REPORT_20260204.md  PROJECT_FINAL_STATUS.md
ml-service/docs/experiments/: 2026-01-20-three-phase-training.md  2026-01-21-ensemble-optimization.md  2026-01-23-korean-model-improvement.md  README.md
ml-service/experiments/: experiments.json
ml-service/experiments/reports/: LATEST_REPORT.md
ml-service/scripts/: active_learning.py  augment_data.py  check_training.sh  cleanup_models.py  create_standard_dataset.py  create_standard_dataset_v3.py  dare_ties_merge.py  download_korean_datasets.py  error_analysis.py  evaluate_all_models.py  find_label_errors.py  generate_llm_hard_negatives.py  generate_quality_graph.py  integrate_korean_datasets.py  model_version_manager.py  phase1_deobfuscation.py  phase2_combined_data.py  phase3_large_model.py  phase4_augmented.py  phase5_cnn_enhanced.py  phase6_combined_korean.py  prepare_korean_dataset.py  retrain_from_samples.py  run_12h_pipeline.py  run_all_phases.sh  run_autonomous_coevolution.py  run_balanced_coevolution.py  run_coevolution.py  run_continuous_coevolution.py  run_diversity_coevolution.py  run_full_training.sh  run_korean_coevolution.py  run_optimized_coevolution.py  run_phase2_sequential.sh  run_pipeline.py  run_robust_training.py  run_training.sh  train.py  train_deberta.py  train_exaone.py  (+6 more)
ml-service/src/ml_service/: __init__.py  main.py
ml-service/src/ml_service/api/: __init__.py  inference.py  routes.py  schemas.py
ml-service/src/ml_service/attacker/: __init__.py  adaptive_selector.py  attacker_evolver.py  auto_generator.py  failure_analyzer.py  hangul_utils.py  korean_strategies.py  learning_attacker.py  llm_attacker.py  slang_dictionary.py
ml-service/src/ml_service/attacker/attacks/: __init__.py  advanced.py  basic.py  community.py  kotox.py
ml-service/src/ml_service/attacker/evolver/: __init__.py  config.py  slang_evolver.py  strategy_mutator.py
ml-service/src/ml_service/config/: pipeline_config.yaml
ml-service/src/ml_service/core/: __init__.py  config.py  exceptions.py  logging.py  protocols.py
ml-service/src/ml_service/feature_store/: __init__.py
ml-service/src/ml_service/feature_store/api/: __init__.py  routes.py
ml-service/src/ml_service/feature_store/compute/: __init__.py  base.py  battle_features.py  text_features.py
ml-service/src/ml_service/feature_store/mlflow_integration/: __init__.py  lineage.py  logger.py
ml-service/src/ml_service/feature_store/offline/: __init__.py  reader.py  writer.py
ml-service/src/ml_service/feature_store/online/: __init__.py  redis_store.py  sync.py
ml-service/src/ml_service/feature_store/registry/: __init__.py  database.py  models.py  repository.py  schemas.py
ml-service/src/ml_service/inference/: calibration.py  ensemble_classifier.py  obfuscation_postprocessor.py  pmf_ensemble.py  production_classifier.py  tta.py
ml-service/src/ml_service/models/: __init__.py  bert_classifier.py  classifier.py  cnn_enhanced.py
ml-service/src/ml_service/monitoring/: __init__.py  metrics.py
ml-service/src/ml_service/monitoring/actions/: __init__.py  retrain_trigger.py  rollback.py
ml-service/src/ml_service/monitoring/alerts/: __init__.py  handlers.py  rules.py
ml-service/src/ml_service/monitoring/api/: __init__.py
ml-service/src/ml_service/monitoring/drift/: __init__.py  (+3 more)
ml-service/src/ml_service/pipeline/: __init__.py  api.py  attack_runner.py  classifier_adapter.py  config.py  data_augmentor.py  evolving_attacker.py  hard_negative_miner.py  korean_attack_runner.py  korean_config.py  model_promoter.py  orchestrator.py  quality_gate.py  sample_collector.py  scheduler.py
ml-service/src/ml_service/services/: __init__.py  inference.py
ml-service/src/ml_service/training/: __init__.py  config.py  contrastive_loss.py  data.py  datasets.py  experiment_logger.py  lahn_loss.py  losses.py  mlflow_utils.py  r3f_loss.py  robust_trainer.py  standard_config.py  trainer.py
ml-service/tests/: __init__.py  conftest.py  test_api.py  test_classifier.py  test_exceptions.py  test_inference.py
ml-service/tests/feature_store/: __init__.py  test_battle_features.py  test_mlflow_integration.py  test_offline_store.py  test_online_store.py  test_text_features.py
ml-service/tests/monitoring/: test_ab_testing.py  test_alert_handlers.py  test_alert_rules.py  test_concept_drift.py  test_confidence.py  test_data_drift.py  test_feature_drift.py  test_metrics_collector.py  test_prediction_logger.py  test_reports.py  test_retrain_trigger.py  test_rollback.py
ml-service/tests/training/: test_config.py
(+150 files in other folders)
