# =============================================================================
# ML Service - Content Classification Inference Service
# =============================================================================

[project]
name = "ml-service"
version = "0.1.0"
description = "Content classification inference service for EvoGuard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "prometheus-client>=0.21.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    # Feature Store dependencies
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    # Offline Store dependencies
    "pyarrow>=15.0.0",
    "duckdb>=1.0.0",
    "pytz>=2024.1",
    # Online Store dependencies
    "redis>=5.0.0",
    # Alert System dependencies
    "aiohttp>=3.9.0",
    # Data processing
    "pandas>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "httpx>=0.27.0",
    "fakeredis>=2.20.0",
]
training = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.42.0",
    "accelerate>=0.25.0",
    "mlflow>=2.10.0",
    "scikit-learn>=1.4.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["-v", "--tb=short"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring external services",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
exclude = ["data/", "scripts/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
